# stock_analysis_agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup_check.py
src/agents/: advisor_agent.py  analysis_agent.py  document_agent.py  orchestrator.py  research_agent.py
src/config/: settings.py
src/models/: schemas.py
src/rag/: pipeline.py  vector_store.py
src/tools/: pdf_parser.py  stock_data.py  web_search.py
src/ui/: app.py
tests/: test_research.py
